<resources>
    <string name="app_name">Pokedex</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Menu -->
    <string name="menu_home">Home</string>
    <string name="menu_pokemon">Pokemon Dex</string>
    <string name="menu_item">Item Dex</string>
    <string name="menu_nature">Nature Dex</string>
    <string name="menu_type">Type Dex</string>
    <!-- Fab -->
    <string name="fab_search">Search</string>
    <string name="fab_web">Open Web</string>
    <!-- Item Menu -->
    <string-array name="tab_item">
        <item>Item</item>
        <item>Berry</item>
    </string-array>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="flavor_like">Like %s flavor</string>
    <string name="flavor_hate">Hate %s flavor</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi lacinia dictum magna, sit amet porta nunc molestie sit amet. Suspendisse.</string>
    <string name="berry_firmness">firmness</string>
    <string name="type">type</string>
    <string name="power">power</string>
    <string name="size">size</string>
    <string name="growth_time">growth time</string>
    <string name="max_harvest">max harvest</string>

    <string name="category">category</string>
    <string name="attributes">attribute</string>
    <string name="cost">cost</string>
    <string name="fling_power">fling power</string>
    <string name="fling_effect">fling effect</string>
    <string name="effect">effect</string>
    <string name="in_depth_effect">in-depth effect</string>

    <!-- Damage -->
    <string name="damage_hint">Select a primary or/and secondary type to view damage relations</string>
    <string name="all_types">all types</string>
    <string name="select_primary_type">select primary type</string>
    <string name="select_secondary_type">select secondary type</string>
    <string name="weak_against">weak against</string>
    <string name="resistant_against">resistant against</string>
    <string name="normal_damage_from">normal damage from</string>

    <!-- Affirmation -->
    <string name="get_affirmation">get me affirmation!</string>
    <string name="affirmation_error">Sorry, no affirmation available today!</string>
    <string name="affirmation_today">Affirmation today</string>
    <string name="affirmation_reply">Thank you!</string>
    <string-array name="affirmation_choice">
        <item>Yes</item>
        <item>No</item>
        <item>Maybe</item>
    </string-array>
</resources>