<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_pokemon"
            android:icon="@drawable/ic_pokeball"
            android:title="@string/menu_pokemon" />
        <item
            android:id="@+id/nav_nature"
            android:icon="@drawable/ic_leaf"
            android:title="@string/menu_nature" />
        <item
            android:id="@+id/nav_item"
            android:icon="@drawable/ic_pill"
            android:title="@string/menu_item" />
    </group>

    <group>
        <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings" />
    </group>

</menu>