<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.natashaval.pokedex.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_pokemon"
        android:name="com.natashaval.pokedex.ui.pokemon.PokemonFragment"
        android:label="@string/menu_pokemon"
        tools:layout="@layout/fragment_pokemon" />

    <fragment
        android:id="@+id/nav_item"
        android:name="com.natashaval.pokedex.ui.item.ItemFragment"
        android:label="@string/menu_item"
        tools:layout="@layout/fragment_item" />

    <fragment
        android:id="@+id/action_settings"
        android:name="com.natashaval.pokedex.ui.SettingsFragment"
        android:label="SettingsFragment" />

    <fragment
        android:id="@+id/nav_nature"
        android:name="com.natashaval.pokedex.ui.nature.NatureFragment"
        android:label="@string/menu_nature"
        tools:layout="@layout/fragment_nature" />
</navigation>